[gd_scene load_steps=5 format=3 uid="uid://eso260jnknd4"]

[ext_resource type="Script" path="res://source/armies/visuals/army_visuals_2d.gd" id="1_80ub2"]
[ext_resource type="Script" path="res://source/armies/visuals/army_movement_animation.gd" id="2_2gbtg"]
[ext_resource type="Texture2D" uid="uid://dlk4vjy5lgeuu" path="res://assets/icon.svg" id="3_5ukdx"]
[ext_resource type="Script" path="res://source/armies/visuals/army_size_box.gd" id="4_r42rs"]

[node name="ArmyVisuals2D" type="Node2D"]
z_index = 1
script = ExtResource("1_80ub2")

[node name="MovementAnimation" type="Node" parent="." node_paths=PackedStringArray("_army_visuals")]
script = ExtResource("2_2gbtg")
_army_visuals = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_5ukdx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2

[node name="ArmySizeBox" type="Control" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(44, 0)
layout_mode = 1
anchor_left = -0.159668
anchor_top = 0.6
anchor_right = 1.15967
anchor_bottom = 1.0
grow_horizontal = 2
script = ExtResource("4_r42rs")

[node name="ArmySizeLabel" type="Label" parent="Control/ArmySizeBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "9999999999"
horizontal_alignment = 1
vertical_alignment = 1
